2008-11-27  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (gnome_volume_applet_dock_new): Rotate the volume control
	dock 90 degrees. Replace the textual '+' and '-' with icons and
	make the whole slider bigger. Rework some of the code to be even
	more data-driven and remove duplication.

2008-11-22  Mario Blättermann  <mariobl@svngnome.org>
	
	* docs/de/de.po: Some fixes in German translation
 
2008-11-14  Callum McKenzie  <callum@spooky-possum.org>

	* preferences.[ch]:
	* dock.[ch]:
	* applet.[ch]: Patch from Maxim Ermilov to rationalise
	GTK includes. See bug 560678.

2008-11-07  Mario Blättermann  <mariobl@svngnome.org>
	
	* docs/de/de.po: Added German translation
	* docs/Makefile.am: Added de to DOC_LINGUAS.
	* docs/de/figures/: Updated screenshot

==================== 2.24.0.1 ====================

2008-09-20  Simos Xenitellis  <simos@gnome.org>

	* docs/Makefile.am: Added el to DOC_LINGUAS.

2008-09-19  Simos Xenitellis  <simos@gnome.org>

	* docs/el/el.po: Added Greek translation by Hlias Makris.

2008-08-27  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c: Patch from Cosimo Cecchi to avoid a crash when the
	panel icon cannot be found. Bug 509065.

2008-08-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* dock.c (destroy_source): set function to void explicitly, to
	avoid no-return-in-nonvoid-function warning.

2008-08-09  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (gnome_volume_applet_popup_dock): Revert to the old
	code for positioning the window. This is ugly, but it doesn't have
	the window mysteriously appearing in an odd place before jumping
	to the right place. (Still bug #456498.)

2008-08-07  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (gnome_volume_applet_dock_init): Be more explicit about
	everything to do with the dock window behaviour. (Continuation of
	bug #456498)

2008-08-06  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (gnome_volume_applet_dock_init): Explicitly disable