@@ -31,7 +31,7 @@
 	 <copyright> 
 		<year>2000</year> 
 		<holder>Dan Mueth</holder> 
-	 </copyright><copyright><year>2008</year><holder>Mario Blättermann (mario.blaettermann@t-online.de)</holder></copyright>
+	 </copyright><copyright><year>2008</year><holder>Mario Blättermann (mariobl@gnome.org)</holder></copyright>
 <!-- translators: uncomment this:
 
   <copyright>
